--- a/style.css
+++ b/style.css
@@ -3,4 +3,86 @@
   margin: 0;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+  font-family: "Poppins";
+}
+
+#bg-vid {
+  width: 100vw;
+  height: auto;
+  z-index: -1;
+  position: fixed;
+}
+
+.layer {
+  z-index: 1;
+  background-color: black;
+  width: 100vw;
+  height: 100vh;
+  opacity: 0.3;
+  position: absolute;
+}
+
+.container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+.container nav {
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+  color: white;
+  z-index: 999;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  width: 90vw;
+}
+.container nav span {
+  color: #eeab92;
+}
+.container nav ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  width: 30vw;
+}
+.container nav ul li {
+  list-style: none;
+}
+.container h1 {
+  z-index: 999;
+  color: white;
+  text-align: center;
+  padding: 1rem;
+}
+.container i {
+  color: #eeab92;
+  padding: 1rem;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+  z-index: 999;
+}
+.container button {
+  background-color: #eeab92;
+  color: black;
+  font-size: 1.25rem;
+  padding: 0.5rem;
+  border: transparent;
+  border-radius: 25px;
+  z-index: 999;
 }
