--- a/Sass/style.scss
+++ b/Sass/style.scss
@@ -2,20 +2,19 @@
 @import "_variables";
 
 
-#bg-vid{
-    width: 100vw;
-    height: auto;
-    z-index: -1;
-    position: fixed;
+body{
+    height: 110vh;
 }
 
 .layer{
-    z-index: 1;
-    background-color: black;
+    background-image: url('../Resources/maksim-istomin-f4aNyqBsv5U-unsplash\ \(1\).jpg');
     width: 100vw;
     height: 100vh;
-    opacity: .3;
-    position: absolute;
+    background-repeat: no-repeat;
+    background-position: center;
+    z-index: -1;
+    position: fixed;
+    color: black;
 }
 
 .container{
@@ -23,6 +22,7 @@
     align-items: center;
     justify-content: center;
     flex-direction: column;
+    z-index: 999;
 
     nav{
         margin-top: 2rem;
@@ -32,7 +32,7 @@
         display: flex;
         justify-content: space-between;
         width: 90vw;
-        //visibility: hidden;
+        visibility: hidden;
 
         span{
             color: rgb(238, 171, 146);
@@ -55,7 +55,7 @@
         color: white;
         text-align: center;
         padding: 1rem;
-        //visibility: hidden;
+        visibility: hidden;
 
     }
     i{
@@ -64,7 +64,7 @@
         margin-top: 2rem;
         margin-bottom: 2rem;
         z-index: 999;
-        //visibility: hidden;
+        visibility: hidden;
 
     }
 
@@ -76,7 +76,17 @@
         border: transparent;
         border-radius: 25px;
         z-index: 999;
-        //visibility: hidden;
+        visibility: hidden;
 
     }
+}
+
+
+.line{
+    display: block;
+    width: 5px;
+    background-color: white;
+    height: 10px;
+    visibility: hidden;
+    margin: 1rem;
 }
